force-app/main/default/objects/Accomodation_Booking__c/Accomodation_Booking__c.object-meta.xml
<CustomObject>
    <label>Accommodation Booking (Old)</label>
    <nameField>
        <displayFormat>AccomBooking-{000000}</displayFormat>
        <label>Accomodation Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accommodation Bookings (Old)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>