force-app/main/default/objects/Accomodation_Booking__c/fields/Cost_Night_Room__c.field-meta.xml
<CustomField>
    <fullName>Cost_Night_Room__c</fullName>
    <label>Cost/Night/Room</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>