force-app/main/default/objects/Accomodation_Booking__c/fields/orders__c.field-meta.xml
<CustomField>
    <fullName>orders__c</fullName>
    <label>orders</label>
    <referenceTo>order__c</referenceTo>
    <relationshipName>Accomodation_Bookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>