force-app/main/default/objects/Accomodation_Booking__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AE Accom</fullName>
                <default>true</default>
                <label>AE Accom</label>
            </value>
            <value>
                <fullName>SB Accom</fullName>
            </value>
            <value>
                <fullName>Custom Accom (AE)</fullName>
            </value>
            <value>
                <fullName>Custom Accom (SB)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>